--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -128,6 +128,24 @@ header {
     display: block;
   }
 }
+/* Chrome, Safari, Opera */
+@-webkit-keyframes scrolldown {
+  from {
+    height: 0%;
+  }
+  to {
+    height: 100%;
+  }
+}
+/* Standard syntax */
+@keyframes scrolldown {
+  from {
+    background-color: red;
+  }
+  to {
+    background-color: yellow;
+  }
+}
 .navigation {
   top: 30px;
   display: block;
@@ -172,6 +190,13 @@ header {
 }
 .showMobileMenu {
   display: block;
+  width: 100%;
+  -webkit-animation-name: scrolldown;
+  /* Chrome, Safari, Opera */
+  -webkit-animation-duration: 4s;
+  /* Chrome, Safari, Opera */
+  animation-name: scrolldown;
+  animation-duration: 4s;
 }
 /*** MID ***/
 .mid {
