--- a/includes/templates/header.html
+++ b/includes/templates/header.html
@@ -19,7 +19,7 @@
 	            <div class="col-xs-2 col-sm-4 site-title">
 	            	<h1>Eric<span class="hidden-sm hidden-xs"> Ethington</span></h1>
 	            </div>
-	            <div class="navigation col-xs-10 col-sm-8" ng-class="{showMobileMenu: app.showMenu}">
+	            <div class="navigation col-xs-10 col-sm-8">
 	                <ul class="nav-list">
 	                    <li class="nav-item"><a href="/">home</a></li>
 	                    <li class="nav-item"><a href="/about">about</a></li>
@@ -28,7 +28,8 @@
 	                    <li class="nav-item"><a href="/about">contact</a></li>
 	                </ul>
 	            </div>
-	            <span class="hamburger" ng-click="app.toggleMenu()">===</span>
+	            <span class="hamburger">===</span>
 	        </div>
         </header>
         <div class="mid">
+        	
