--- a/includes/templates/projects.html
+++ b/includes/templates/projects.html
@@ -3,59 +3,52 @@
         <div class="col-xs-12">
             <h2>Projects</h2>
         </div>
-        <div class="project-container">
+        <div class="all-projects">
+
             <div class="project col-xs-12 col-sm-6 col-md-4 col-lg-3">
-                <div class="title">
-                    <a ui-sref="webcrawler"><h3>Webcrawler</h3></a>
-                </div>
-                <div class="description">
-                    <p>Counts all the words on a web page and displays them in a table from most common to least common. Similar to a very simple Google.</p>
-                </div>
+            	<a href="#">
+	            	<div class="project-wrapper">
+		            	<img class="project-img" src="../img/webcrawler_screenshot.png">
+		            	<div class="blurb">
+		            		<div class="title"><h3>Web Crawler</h3></div>
+		            		<p class="short-description"><include href="{{ @webcrawler_short_description }}" /><p>
+		                    <p class="medium-description"><include href="{{ @webcrawler_medium_description }}" /></p>
+		                </div>
+		            </div>
+		        </a>
             </div>
+
+
             <div class="project col-xs-12 col-sm-6 col-md-4 col-lg-3">
-                <div class="title">
-                    <a ui-sref="sms-tracker"><h3>SMS Attendance Tracker</h3></a>
-                </div>
-                <div class="link">
-                </div>
-                <div class="description">
-                    <p>Tracks classroom attendance using SMS messaging and displays it using Google spreadsheet.</p>
-                    <p>text: "register FirstName LastName" to: provided Twilio number and wait for confirmation text.</p>
-                    <p>text: "here" to same number and wait for confirmation text.</p>
-                    <div><a href="https://github.com/erceth/attendance-tracker" target="_blank">SMS Attendance Tracker Github repo </a></div>
-                    <div><a href="https://docs.google.com/spreadsheets/d/1BKtDlT-R3nlqEIMLs0XvrFGBAsqFqzSbAnzKaHJfJ-8/edit#gid=2132167194" target="_blank">Google spreadsheet</a></div>
-                </div>
+            	<a href="#">
+	            	<div class="project-wrapper">
+		            	<img class="project-img" src="../img/tanks2.png">
+		            	<div class="blurb">
+		            		<div class="title"><h3>JSFlags</h3></div>
+		                    <p class="description">JSFlags is an artificial intelligence tank game.</p>
+		                    <p class="medium-description">Counts all the words on a web page.</p>
+		                </div>
+		            </div>
+		        </a>
             </div>
+
+
             <div class="project col-xs-12 col-sm-6 col-md-4 col-lg-3">
-                <div class="title">
-                    <a ui-sref="jsflags"><h3>JSFlags</h3></a>
-                </div>
-                <div class="description">
-                    <p>JSFlags is an artificial intelligence tank game. The tanks' movement, game engine, collision detection, controls and AI logic are all written in Node.js and Javascript. The view portion uses HTML canvas that is manipulated with Javascript.</p>
-                </div>
+            	<a href="#">
+	            	<div class="project-wrapper">
+		            	<img class="project-img" src="../img/google-sheets.png">
+		            	<div class="blurb">
+		            		<div class="title"><h3>SMS Attendance</h3></div>
+		                    <p class="description">Tracks classroom attendance using SMS messaging.</p>
+		                    <p class="medium-description">Counts all the words on a web page.</p>
+		                </div>
+
+		                
+		            </div>
+		        </a>
             </div>
-            <div class="project col-xs-12 col-sm-6 col-md-4 col-lg-3">
-                <div class="title">
-                    <h3>Personal blog</h3>
-                </div>
-                <div class="link">
-                    <a href="http://blog.ericethington.com" target="_blank">http://blog.ericethington.com</a>
-                </div>
-                <div class="description">
-                    <p>My personal Wordpress blog running on an Nginx server. Learn a little about my personal life.</p>
-                </div>
-            </div>
-            <div class="project col-xs-12 col-sm-6 col-md-4 col-lg-3">
-                <div class="title">
-                    <h3>Tutorial blog</h3>
-                </div>
-                <div class="link">
-                    <a href="http://tutorial.ericethington.com" target="_blank">http://tutorial.ericethington.com</a>
-                </div>
-                <div class="description">
-                    <p>My Drupal blog running on an Nginx server. Here I will document the steps I took to create ericethingon.com and all its subdomains. There is currently not much there.</p>
-                </div>
-            </div>
+
+
         </div>
     </div>
 </div>
