--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -80,6 +80,52 @@
 .jsflags #jsflagiframe {
   color: red;
 }
+.projects .all-projects .project {
+  position: relative;
+  height: 300px;
+  width: 300px;
+  margin-right: 30px;
+  text-decoration: none;
+  cursor: pointer;
+}
+.projects .all-projects .project:last-child {
+  margin-right: 0;
+}
+.projects .all-projects .project:hover .blurb {
+  height: 300px;
+}
+.projects .all-projects .project:hover .blurb .medium-description {
+  opacity: 1;
+  visibility: visible;
+  transition: opacity 1s linear;
+  -webkit-transition: opacity 1s linear;
+}
+.projects .all-projects .project-img {
+  width: 300px;
+}
+.projects .all-projects .blurb {
+  position: absolute;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.5);
+  color: #fff;
+  height: 100px;
+  width: 100%;
+  padding: 15px;
+  -webkit-transition: height .5s;
+  transition: height .5s;
+}
+.projects .all-projects .blurb .title {
+  color: #00628b;
+}
+.projects .all-projects .blurb .title h3 {
+  margin: 0;
+}
+.projects .all-projects .blurb .medium-description {
+  opacity: 0;
+  visibility: hidden;
+  transition: visibility 0s 1s, opacity 1s linear;
+  -webkit-transition: visibility 0s 1s, opacity 1s linear;
+}
 /** WRAPPER ***/
 .wrapper {
   min-height: 100%;
@@ -121,87 +167,49 @@ header {
   position: absolute;
   right: 10px;
   top: 30px;
-  display: none;
 }
-@media (max-width: 768px) {
-  .hamburger {
-    display: block;
-  }
-}
-/* Chrome, Safari, Opera */
-@-webkit-keyframes scrolldown {
-  from {
-    height: 0%;
-  }
-  to {
-    height: 100%;
-  }
-}
-/* Standard syntax */
-@keyframes scrolldown {
-  from {
-    background-color: red;
-  }
-  to {
-    background-color: yellow;
-  }
-}
-.navigation {
-  top: 30px;
-  display: block;
-}
-.navigation .nav-list {
+.nav-list {
   float: right;
-}
-.navigation ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
 }
-.navigation a {
+.nav-list a {
   color: #fff;
   display: block;
   padding: 5px 15px;
   text-transform: capitalize;
 }
-.navigation .nav-item {
+.nav-list .nav-item {
   background: rgba(0, 0, 0, 0.2);
   float: left;
   border-left: 1px solid;
 }
-.navigation .nav-item:last-child {
+.nav-list .nav-item:last-child {
   border-right: 1px solid;
 }
-.navigation .nav-item:hover {
+.nav-list .nav-item:hover {
   background: rgba(0, 0, 0, 0.5);
 }
-@media (max-width: 768px) {
-  .navigation {
-    display: none;
-    background: red;
-    position: absolute;
-    top: 60px !important;
-    right: 0;
-    z-index: 10;
-  }
-  .navigation li {
-    width: 100%;
-  }
+.navigation {
+  top: 30px;
 }
-.showMobileMenu {
-  display: block;
+.mobile-navigation {
+  position: relative;
+  z-index: 12;
+  display: none;
+}
+.mobile-navigation .nav-list {
   width: 100%;
-  -webkit-animation-name: scrolldown;
-  /* Chrome, Safari, Opera */
-  -webkit-animation-duration: 4s;
-  /* Chrome, Safari, Opera */
-  animation-name: scrolldown;
-  animation-duration: 4s;
+}
+.mobile-navigation .nav-item {
+  width: 100%;
 }
 /*** MID ***/
 .mid {
   padding: 10px 60px;
   padding-bottom: 120px;
+  overflow: hidden;
 }
 @media (max-width: 767px) {
   .mid {
@@ -292,4 +300,11 @@ footer.footer {
 .col-md-12,
 .col-lg-12 {
   padding: 0;
+}
+/* prevents animations from running on page load*/
+.preload * {
+  -webkit-animation: none !important;
+  -moz-animation: none !important;
+  -ms-animation: none !important;
+  -o-animation: none !important;
 }
