--- a/includes/templates/footer.html
+++ b/includes/templates/footer.html
@@ -1,7 +1,7 @@
 		</div><!-- end of of mid -->
-        <footer class="footer col-xs-12" ng-hide="hideFooterHeader()">
+        <footer class="footer col-xs-12">
         	<div class="footer-container">
-        		<span>Learn about the true Eric Ethington</span>
+        		<span></span>
         	</div>
         </footer>
     </div>
