--- a/includes/templates/admin.html
+++ b/includes/templates/admin.html
@@ -1,24 +1,38 @@
-<div class="col-xs-6 admin page">
+<div class="col-xs-12 col-sm-6 admin page">
+	<h3>current students</h3>
 	<repeat group="{{ @users }}" value="{{ @user }}">
+	    <p>name: <a href="/admin/user/{{@user['id']}}">{{ @user["first_name"] }} {{ @user["last_name"] }}</a></p>
+	    <form action="/admin" method="post">
+	    	<input type="hidden" name="userID" value="{{ @user['id'] }}">
+	    	<input type="submit" name="delete-user" value="delete">
+	    </form>
+	</repeat>
+</div>
+<div class="col-xs-12 col-sm-6">
+	<h3>New User</h3>
+	<form action="/admin" method="post">
+		<input type="text" name="username" placeholder="Username"><br>
+		<check if="{{ isset(@new_user_error) }}">
+		    <span>{{ @new_user_error }}</span>
+		</check>
+		<input type="text" name="first-name" placeholder="First Name"><br> <!-- TODO: prepopulate fields on error -->
+		<input type="text" name="last-name" placeholder="Last Name"><br>
+		<input type="password" name="password" placeholder="password"><br>
+		<input type="password" name="confirm-password" placeholder="confirm password"><br>
+		<input type="radio" name="admin" value="1"><label for="admin">admin</label>
+		<input type="radio" name="admin" value="0" checked="checked"><label for="admin">not admin</label>
+		<input type="submit" name="new-user" value="Create User">
+	</form>
+
+</div>
+
+<div class="col-xs-12 col-sm-6">
+	<h3>Reminders</h3>
+	<!-- <repeat group="{{ @users }}" value="{{ @user }}">
 	    <p>name: <a href="/admin/user/{{@user['id']}}">{{ @user["name"] }}</a></p>
 	    <form action="/admin/delete-user" method="post">
 	    	<input type="hidden" name="userID" value="{{ @user['id'] }}">
 	    	<input type="submit" name="submit" value="delete">
 	    </form>
-
-	</repeat>
+	</repeat> -->
 </div>
-<div class="col-xs-6">
-	<h3>New User</h3>
-	<form action="/admin/new-user" method="post">
-		<input type="text" name="name" placeholder="FirstName LastName"><br>
-		<input type="password" name="password" placeholder="password"><br>
-		<input type="password" name="confirm-password" placeholder="confirm password"><br>
-		<input type="radio" name="admin" value="1"><label for="admin">admin</label>
-		<input type="radio" name="admin" value="0" checked="checked"><label for="admin">not admin</label>
-		<input type="submit" name="submit" value="Create User">
-	</form>
-
-</div>
-
-
