--- a/includes/templates/admin_user_details.html
+++ b/includes/templates/admin_user_details.html
@@ -1,21 +1,19 @@
 <div class="col-xs-12 admin-user-details page">
 	<div class="col-xs-6">
-	    <h3>{{ @user_details["name"] }}</h3>
+	    <h3>{{ @user_details["first_name"] }} {{ @user_details["last_name"] }}</h3>
 	</div>
 
 	<div class="col-xs-6">
-		<form action="/admin/upload-file" method="post" enctype="multipart/form-data">
-		    Select image to upload for {{@user_details["name"]}}:<br>
+		<form action="/admin/user/{{ @user_details[id]}}" method="post" enctype="multipart/form-data">
+		    Select image to upload for {{ @user_details["first_name"] }} {{ @user_details["last_name"] }}:<br>
 		    <input type="file" name="file" id="file"><br>
 		    <input type="hidden" name="user_id" value="{{ @user_details['id'] }}"><br>
-		    <input type="submit" name="submit">
+		    <input type="submit" name="upload-file" value="upload">
 		</form>
 	</div>
 	
 	<div class="col-xs-6">
-		<repeat group="{{ @files }}" value="{{ @file }}">
-			<div> {{ @file["date"] }} <a href="/view/{{ @file["file_name"] }}"> view </a> <a href="/download/{{ @file["file_name"] }}"> download </a></div>
-		</repeat>
+		<include href="{{ @users_files }}" />
 	</div>
 	<div class="col-xs-12">
 		<a class="btn btn-default" href="/admin">back to admin</a>
