--- a/includes/templates/header.html
+++ b/includes/templates/header.html
@@ -10,7 +10,9 @@
 </head>
 
 <body class="preload">
-	<a href="/logout">logout</a>
+	<div class="col-xs-12">
+		<a class="pull-right" href="/logout">logout</a>
+	</div>
     <div class="wrapper">
         
         <div class="mid">
