--- a/includes/templates/home.html
+++ b/includes/templates/home.html
@@ -1,6 +1,6 @@
 <div class="col-xs-12 home page">
-	<form action="/v1-api/login" method="post">
+	<form action="/" method="post">
 	<input type="text" name="username" maxlength="30">
 	<input type="password" name="password" password="password" maxlength="30">
-	<input type="submit" name="submit" value="login">
+	<input type="submit" name="login" value="login">
 </div>
