--- a/includes/templates/user.html
+++ b/includes/templates/user.html
@@ -1,3 +1,10 @@
 <div class="col-xs-12 user page">
-	user
+    <div class="col-xs-6">
+        <h3>{{ @user_details["first_name"] }} {{ @user_details["last_name"] }}</h3>
+    </div>
+
+    <div class="col-xs-6">
+    	<include href="{{ @users_files }}" />
+    </div>
+
 </div>
