--- a/includes/templates/admin.html
+++ b/includes/templates/admin.html
@@ -1,38 +1,74 @@
-<div class="col-xs-12 col-sm-6 admin page">
-	<h3>current students</h3>
-	<repeat group="{{ @users }}" value="{{ @user }}">
-	    <p>name: <a href="/admin/user/{{@user['id']}}">{{ @user["first_name"] }} {{ @user["last_name"] }}</a></p>
-	    <form action="/admin" method="post">
-	    	<input type="hidden" name="userID" value="{{ @user['id'] }}">
-	    	<input type="submit" name="delete-user" value="delete">
-	    </form>
-	</repeat>
-</div>
-<div class="col-xs-12 col-sm-6">
-	<h3>New User</h3>
-	<form action="/admin" method="post">
-		<input type="text" name="username" placeholder="Username"><br>
-		<check if="{{ isset(@new_user_error) }}">
-		    <span>{{ @new_user_error }}</span>
-		</check>
-		<input type="text" name="first-name" placeholder="First Name"><br> <!-- TODO: prepopulate fields on error -->
-		<input type="text" name="last-name" placeholder="Last Name"><br>
-		<input type="password" name="password" placeholder="password"><br>
-		<input type="password" name="confirm-password" placeholder="confirm password"><br>
-		<input type="radio" name="admin" value="1"><label for="admin">admin</label>
-		<input type="radio" name="admin" value="0" checked="checked"><label for="admin">not admin</label>
-		<input type="submit" name="new-user" value="Create User">
-	</form>
+<div class="admin page">
+	<div class="students col-xs-12 col-sm-6">
+		<h3>current students</h3>
+		<div class="student-table">
+			<table class="table">
+				<repeat group="{{ @users }}" value="{{ @user }}">
+					<tr>
+					    <td>name: <a href="/admin/user/{{@user['id']}}">{{ @user["first_name"] }} {{ @user["last_name"] }}</a></td>
+					    <td>
+					    	<form action="/admin" method="post">
+						    	<input type="hidden" name="userID" value="{{ @user['id'] }}">
+						    	<input type="submit" name="delete-user" value="delete">
+					    	</form>
+					    </td>
+					</tr>
 
-</div>
+				</repeat>
+			</table>
+		</div>
+	</div>
+	<div class="new-student col-xs-12 col-sm-6">
+		<h3>New User</h3>
+		<form action="/admin" method="post">
+			<input type="text" name="username" placeholder="Username"><br>
+			<check if="{{ isset(@new_user_error) }}">
+			    <span>{{ @new_user_error }}</span>
+			</check>
+			<input type="text" name="first-name" placeholder="First Name"><br> <!-- TODO: prepopulate fields on error -->
+			<input type="text" name="last-name" placeholder="Last Name"><br>
+			<input type="password" name="password" placeholder="password"><br>
+			<input type="password" name="confirm-password" placeholder="confirm password"><br>
+			<input type="radio" name="admin" value="1"><label for="admin">admin</label>
+			<input type="radio" name="admin" value="0" checked="checked"><label for="admin">not admin</label>
+			<input type="submit" name="new-user" value="Create User">
+		</form>
 
-<div class="col-xs-12 col-sm-6">
-	<h3>Reminders</h3>
-	<!-- <repeat group="{{ @users }}" value="{{ @user }}">
-	    <p>name: <a href="/admin/user/{{@user['id']}}">{{ @user["name"] }}</a></p>
-	    <form action="/admin/delete-user" method="post">
-	    	<input type="hidden" name="userID" value="{{ @user['id'] }}">
-	    	<input type="submit" name="submit" value="delete">
-	    </form>
-	</repeat> -->
+	</div>
+
+	<div class="reminder col-xs-12 col-sm-6">
+		<h3>Reminders</h3>
+		<div class="reminder-table">
+			<include href="{{ @reminders_block }}" />
+		</div>
+	</div>
+
+	<div class="new-reminder col-xs-12 col-sm-6">
+		<h3>Create new reminder</h3>
+		<a href="/admin/reminder" class="btn btn-default">Create new reminder</a>
+	</div>
+
+	<div class="quotes col-xs-12 col-sm-6">
+		<h3>All Quotes of the Day</h3>
+		<div class="quote-table">
+			<table class="table">
+				<repeat group="{{ @all_quotes }}" value="{{ @quote }}">
+					<tr>
+					    <td><div>{{ @quote["text"] }}</div></td>
+					    <td>
+						    <form action="/admin" method="post">
+								<input type="hidden" name="quoteID" value="{{ @quote['id'] }}">
+								<input type="submit" name="delete-quote" value="delete">
+							</form>
+						</td>
+					</tr>
+				</repeat>
+			</table>
+		</div>
+	</div>
+	<div class="new-quote col-xs-12 col-sm-6">
+		<h3>Quotes of the day</h3>
+		<a href="/admin/quotes" class="btn btn-default">Create new quote of the day</a>
+	</div>
+
 </div>
