--- a/less/main.less
+++ b/less/main.less
@@ -1,6 +1,6 @@
-@import "variables"
-@import "main.less"
-
+@import "variables";
+@import "main.less";
+@import "admin.less";
 
 // background: #4c4c4c; /* Old browsers */
 // background: -moz-linear-gradient(top,  #4c4c4c 0%, #595959 12%, #666666 25%, #131313 100%); /* FF3.6+ */
@@ -10,3 +10,6 @@
 // background: -ms-linear-gradient(top,  #4c4c4c 0%,#595959 12%,#666666 25%,#131313 100%); /* IE10+ */
 // background: linear-gradient(to bottom,  #4c4c4c 0%,#595959 12%,#666666 25%,#131313 100%); /* W3C */
 // filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4c4c4c', endColorstr='#131313',GradientType=0 ); /* IE6-9 */
+
+
+
