--- a/includes/templates/footer.html
+++ b/includes/templates/footer.html
@@ -1,7 +1,7 @@
 		</div><!-- end of of mid -->
         <footer class="footer col-xs-12">
         	<div class="footer-container">
-        		<span></span>
+        		<span>{{ @quote_of_day }}</span>
         	</div>
         </footer>
     </div>
