--- a/includes/templates/header.html
+++ b/includes/templates/header.html
@@ -10,9 +10,9 @@
 </head>
 
 <body class="preload">
-	<div class="col-xs-12">
-		<a class="pull-right" href="/logout">logout</a>
-	</div>
     <div class="wrapper">
+    	<div class="col-xs-12 header">
+			<a class="pull-right" href="/logout">logout</a>
+		</div>
         
-        <div class="mid">
+        <div class="col-xs-12 mid">
