--- a/includes/templates/quote.html
+++ b/includes/templates/quote.html
@@ -1,7 +1,7 @@
 <div class="col-xs-12 page quote">
 	<h3>New Quote</h3>
 	<form action="/admin" method="post">
-		<textarea name="text" placeholder="Enter your new quote"></textarea>
+		<textarea rows="4" cols="50" name="text" placeholder="Enter your new quote"></textarea>
 		<input type="submit" name="new-quote" value="Create Quote">
 	</form>
 </div>
