--- a/less/home.less
+++ b/less/home.less
@@ -1,5 +1,18 @@
 .home {
-	
+    margin: auto;
+    margin-top: 30px;
+    width: 152px;
+    color: gold;
+    input {
+        margin-bottom: 30px;
 
+        -webkit-transition: -webkit-box-shadow .5s;
+		transition: box-shadow .5s;
+        &:focus, &:visited {
 
+            -moz-box-shadow: inset 0 0 100px #000000;
+            -webkit-box-shadow: inset 0 0 100px #000000;
+            box-shadow: inset 0 0 100px #000000;
+        }
+    }
 }
