--- a/includes/templates/admin_user_details.html
+++ b/includes/templates/admin_user_details.html
@@ -12,7 +12,7 @@
 		</form>
 	</div>
 	
-	<div class="col-xs-6">
+	<div class="col-xs-6 user-table">
 		<include href="{{ @users_files }}" />
 	</div>
 	<div class="col-xs-12">
