--- a/includes/templates/home.html
+++ b/includes/templates/home.html
@@ -1,6 +1,6 @@
-<div class="col-xs-12 home page">
+<div class="home page">
 	<form action="/" method="post">
-	<input type="text" name="username" maxlength="30">
-	<input type="password" name="password" password="password" maxlength="30">
+	<input type="text" name="username" placeholder="username" maxlength="30"><br>
+	<input type="password" name="password" password="password" placeholder="password" maxlength="30"><br>
 	<input type="submit" name="login" value="login">
 </div>
