--- a/includes/templates/user.html
+++ b/includes/templates/user.html
@@ -1,10 +1,18 @@
 <div class="col-xs-12 user page">
-    <div class="col-xs-6">
+    <div class="col-xs-12">
         <h3>{{ @user_details["first_name"] }} {{ @user_details["last_name"] }}</h3>
     </div>
 
     <div class="col-xs-6">
+    	<h3>Lessons</h3>
     	<include href="{{ @users_files }}" />
+    </div>
+
+    <div class="col-xs-6">
+    	<h3>Reminders</h3>
+		<div class="reminder-table">
+			<include href="{{ @reminders_block }}" />
+		</div>
     </div>
 
 </div>
