--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -15,3 +15,81 @@
   overflow-y: scroll;
   border: 1px solid;
 }
+.home {
+  margin: auto;
+  margin-top: 30px;
+  width: 152px;
+  color: gold;
+}
+.home input {
+  margin-bottom: 30px;
+  -webkit-transition: -webkit-box-shadow 0.5s;
+  transition: box-shadow 0.5s;
+}
+.home input:focus,
+.home input:visited {
+  -moz-box-shadow: inset 0 0 100px #000000;
+  -webkit-box-shadow: inset 0 0 100px #000000;
+  box-shadow: inset 0 0 100px #000000;
+}
+.files {
+  height: 300px;
+}
+.file-table {
+  height: 200px;
+  overflow-y: scroll;
+  border: 1px solid;
+}
+html,
+body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+.wrapper {
+  min-height: 100%;
+  position: absolute;
+  width: 100%;
+  background: #4c4c4c;
+  /* Old browsers */
+  background: -moz-linear-gradient(top, #4c4c4c 0%, #131313 100%);
+  /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #4c4c4c), color-stop(100%, #131313));
+  /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, #4c4c4c 0%, #131313 100%);
+  /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top, #4c4c4c 0%, #131313 100%);
+  /* Opera 11.10+ */
+  background: -ms-linear-gradient(top, #4c4c4c 0%, #131313 100%);
+  /* IE10+ */
+  background: linear-gradient(to bottom, #4c4c4c 0%, #131313 100%);
+  /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#4c4c4c', endColorstr='#131313', GradientType=0);
+  /* IE6-9 */
+}
+.header {
+  height: 100px;
+  background: #fff;
+}
+.mid {
+  padding-bottom: 100px;
+  /* Height of the footer element */
+}
+.student-table,
+.reminder-table,
+.quote-table,
+.file-table {
+  background: #fff;
+}
+h3 {
+  color: #fff;
+}
+.footer {
+  width: 100%;
+  height: 100px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  color: #fff;
+  background: #000;
+}
