--- a/includes/templates/reminder.html
+++ b/includes/templates/reminder.html
@@ -1,7 +1,8 @@
 <div class="col-xs-12 page reminder">
 	<h3>New Reminder</h3>
 	<form action="/admin" method="post">
-		<textarea name="text" placeholder="Enter your new reminder"></textarea>
-		<input type="submit" name="new-reminder" value="Create Reminder">
+		<textarea rows="4" cols="50" name="text" placeholder="Enter your new reminder"></textarea><br>
+		<input class="btn btn-default" type="submit" name="new-reminder" value="Create Reminder">
+		<a class="btn btn-default" href="/admin">back to admin</a>
 	</form>
 </div>
