--- a/includes/templates/admin.html
+++ b/includes/templates/admin.html
@@ -9,7 +9,7 @@
 					    <td>
 					    	<form action="/admin" method="post">
 						    	<input type="hidden" name="userID" value="{{ @user['id'] }}">
-						    	<input type="submit" name="delete-user" value="delete">
+						    	<input  type="submit" name="delete-user" value="delete">
 					    	</form>
 					    </td>
 					</tr>
@@ -31,7 +31,7 @@
 			<input type="password" name="confirm-password" placeholder="confirm password"><br>
 			<input type="radio" name="admin" value="1"><label for="admin">admin</label>
 			<input type="radio" name="admin" value="0" checked="checked"><label for="admin">not admin</label><br>
-			<input type="submit" name="new-user" value="Create User">
+			<input class="btn btn-default" type="submit" name="new-user" value="Create User">
 		</form>
 
 	</div>
