--- a/includes/templates/quote.html
+++ b/includes/templates/quote.html
@@ -1,7 +1,8 @@
 <div class="col-xs-12 page quote">
 	<h3>New Quote</h3>
 	<form action="/admin" method="post">
-		<textarea rows="4" cols="50" name="text" placeholder="Enter your new quote"></textarea>
-		<input type="submit" name="new-quote" value="Create Quote">
+		<textarea rows="4" cols="50" name="text" placeholder="Enter your new quote"></textarea><br>
+		<input class="btn btn-default" type="submit" name="new-quote" value="Create Quote">
+		<a class="btn btn-default" href="/admin">back to admin</a>
 	</form>
 </div>
