--- a/less/main.less
+++ b/less/main.less
@@ -41,6 +41,15 @@ body {
 .header {
 	height:100px;
 	background: #fff;
+
+	#siteTitle {
+	    font-size: 50px;
+	    font-family: cursive;
+	    font-weight: bold;
+	}
+	.logout {
+		margin-top: 30px;
+	}
 }
 .mid {
 	
@@ -52,7 +61,7 @@ body {
 .student-table, .reminder-table, .quote-table, .file-table {
 	background: #fff;
 }
-h3 {
+h3, label {
 	color: #fff;
 }
 
@@ -65,5 +74,10 @@ h3 {
 	left:0;
 	color: #fff;
 	background: #000;
+	.quote-of-day {
+		position: absolute;
+		margin: 30px 0 0 30px;
+
+	}
 }
 
